fixing some social media spacing

--- a/template/styles/styles.css
+++ b/template/styles/styles.css
@@ -1,4 +1,4 @@
 .email-logo{
-    width: 10px !important;
-    height:10px !important;
+    width: 30px !important;
+    height:30px !important;
 }
